--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,4 +1,4 @@
-.topbar {
+.site-header {
     position: sticky;
     top: 0px;left: 0px;right: 0px;
     display: flex;
@@ -6,9 +6,9 @@
     font-size: 1.3rem;
     background-color: #f7fcf9;
     z-index: 1000;
-    // box-shadow: rgba(223, 233, 245, 1) 0px 30px 99px;
+    height: 9.5rem;
 
-    &__container {
+    .header-container {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -16,257 +16,391 @@
         width: calc(100% - 8rem);
         margin: 0 auto;
         height: 100%;
+
+        @media only screen and (max-width: 768px) {
+            flex-direction: row-reverse;
+        }
     }
 
-    &__menu {
+    .logo-container {
+        font-size: 3rem;
+        font-weight: 300;
+
+        @media only screen and (max-width: 768px) {
+            margin-right: 4rem;
+        }
+
+        span:first-of-type {
+            font-weight: 900;
+            background-image: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+    }
+}
+.main-navigation {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+    height: 100%; 
+
+    @media only screen and (max-width: 768px) {
+        gap: 0;
+    }
+
+    .services-button {
         display: flex;
-        align-items: center;
-        gap: 2.5rem;
-        height: 100%; 
-
-        .btn-prestataire {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            color: #342020;
-            margin-right: 1.5rem;
-        }
-
-        > div {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            height: 100%;
-            color: #342020;
-        }
-    }
-
-    .menu__search {
-        border-radius: 10px;
-        align-items: center;
-        padding: 0 2rem;
-        display: flex;
-        width: 275px;
-        gap: 1rem;
-        border: solid 1px #DCE2E7;
-        background-color: white;
-
-        input {
-            padding: 1.15rem 0;
-            border: none;
-            width: 100%;
-        }
-    }
-
-    .menu__dropdowns,
-    .menu__profil {
+        height: 100%;
         position: relative;
-    }
-    .menu__dropdowns:hover,
-    .menu__profil:hover {
-        > ul {
-            display: block;
-            color: red;
-            // ul {
-            //     display: none;
-            // }
-        }
-    }
-// 
-    .menu__dropdowns:hover {
-        li:hover {
-            background: rgb(218,234,245);
-            background: linear-gradient(90deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
-            color: #5D4E91;;
-        }
-    }
-
-    .menu__dropdowns--btn {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        line-height: 1;
-        padding: 4rem 0 3.8rem 0;
-        // border: solid;
-
-        &:hover ul {
-            display: block;
-        }
-
-        // ul:has(.menu__dropdowns--btn:hover) {
-        //     display: block;
-        // }
-    }
-
-    .menu__dropdowns--dropdowns {
-        position: absolute;
-        top: 94px;
-        left: 86px;
-        border-radius: 10px;
-        border: solid 1px #C3BAE9;
-        display: none;
-        background-color: white;
-
-        li {
-            border-top: solid 1px #C3BAE9;
-            white-space: nowrap;
-            cursor: pointer;
-        }
-        li:first-child {
-            border-top: none;
-            border-top-right-radius: 10px;
-            border-top-left-radius: 10px;
-        }
-        li:last-child {
-            position: relative;
-            border-bottom-right-radius: 10px;
-            border-bottom-left-radius: 10px;
-
-            &:hover > ul {
-                display: block;
-            }
-        }
-        ul {
-            border-radius: 10px;
-            position: absolute;
-            right: -128px;
-            top: 0px;
-            border: solid 1px #C3BAE9;
-            background-color: white;
-        }
-        li a {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            padding: 1rem 2rem;
-        }
-    }
-
-    .menu__prestataire {
+        
         a {
             display: flex;
             align-items: center;
-            place-content: center;
-            line-height: 1;
-            padding: 1.35rem 3.5rem 1.15rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            border-radius: 10px;
-            border: solid 1px white;
-            cursor: pointer;
-            box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
+            gap: 1rem;
         }
-    }
-
-    .menu-profil {
-        position: relative;
-        font-size: 1.4rem;
-
-        .profil-photo {
-            border: solid;
-            height: 6rem;
-            width: 6rem;
-            border-radius: 50%;
-            overflow: hidden;
+        svg {
+            height: 1.6rem;
         }
-        .profil-btn {
-            border: solid 2px white;
-            box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
-            cursor: pointer;
-
-            &:hover {
-                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            }
-        }
-
-        &__content {
-            position: absolute;
-            top: 94px;right: 0;
-            border-radius: 15px;
-            width: 300px;
-            overflow: hidden;
-            display: none;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        }
-        &__content.active {
-            display: block;
+        span {
+            margin-top: 3px;
         }
         
         ul {
-            background-color: #e9edf0;
-            padding: 8px;
-        }
-        li {
-            display: flex;
-            padding: 1rem 2rem;
-            flex-wrap: wrap;
-        }
-        li:nth-of-type(1) {
-            background-color: white;
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-            margin-bottom: 4px;
-
-            a {
-                margin-left: 8rem;
-                border: solid 1px;
-                border-radius: 10px;
-                padding: .75rem 1rem .35rem;
-            }
-        }
-        li:nth-of-type(2) {
-            background-color: white;
-            border-top-left-radius: 4px;
-            border-top-right-radius: 4px;
-        }
-        li:nth-of-type(3) {
-            background-color: white;
-            border-bottom-left-radius: 15px;
-            border-bottom-right-radius: 15px;
-        }
-        &__content > div {
-            font-size: 1.3rem;
-            white-space: nowrap;
-            background-color: #e9edf0;
-            border-top: solid 1px grey;
-            font-weight: 300;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .avatar {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #5f90cb;
-            text-transform: uppercase;
-            border-radius: 50%;
-            font-size: 30px;
-            height: 6rem;
-            width: 6rem;
-            color: white;
-            padding-top: 1rem;
+            display: none;
+            border: solid 1px #C3BAE9;
+            position: absolute;
+            top: 9.5rem;
+            left: -5.5rem;
+            width: 19rem;
+            border-radius: 1rem;
             overflow: hidden;
         }
-        .box1 {
-            flex: 0 0 6rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        li {
+            padding: 1.5rem 3rem;
+        }
+        li:hover {
+            color: #5D4E91;
+            background: rgb(218,234,245);
+            background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+        }
 
-            svg {
-                height: 25px;
+        &:hover {
+            a {
+                color: #5D4E91;
+            }
+
+            ul {
+                display: block;
             }
         }
-        .box2 {
-            flex: 1;
+        @media only screen and (max-width: 768px) {
+            display: none;
+        }
+    }
+    .providers-button,
+    .dashbord-button {
+        a {
             display: flex;
-            flex-flow: column;
-            justify-content: center;
-            padding-left: 2rem;
+            align-items: center;
+            gap: 1rem;
+        }
+        svg {
+            height: 1.6rem;
+        }
+        span {
+            margin-top: 3px;
+            white-space: nowrap;
+        }
+
+        &:hover {
+            color: #5D4E91;
+        }
+
+        @media only screen and (max-width: 768px) {
+            display: none;
+        }
+    }
+    .reg-button a {
+        display: flex;
+        align-items: center;
+        place-content: center;
+        line-height: 1;
+        padding: 1.35rem 3.5rem 1.15rem;
+        background: rgb(207,196,255);
+        background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+        border-radius: 10px;
+        border: solid 1px white;
+        cursor: pointer;
+        box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
+
+        &:hover {
+            background: rgb(218,234,245);
+            background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+        }
+
+        @media only screen and (max-width: 768px) {
+            display: none;
+        }
+    }
+    .profile-button {
+        border: solid 2px white;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+        cursor: pointer;
+        border-radius: 50%;
+        height: 6rem;
+        width: 6rem;
+        display: flex;
+        align-items: center;
+        place-content: center;
+        background-color: #C768B1;
+        position: relative;
+
+        &:hover {
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        }
+
+        &-container {
+            display: flex;
+        }
+        &-container > span{
+            font-size: 3rem;
+            font-weight: 700;
+            color: white;
+            height: 29px;
+        }
+        svg {
+            color: white;
+        }
+    }
+}
+.profile-dropdown {
+    display: none;
+    font-size: 1.4rem;
+    border-radius: 1rem;
+    width: 26rem;
+    position: absolute;
+    top: 7.5rem;
+    right: 0;
+    background-color: #DAEAF5;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
+    &.active {
+        display: block;
+    }
+    .profile-dropdown-menu {
+        padding: 1rem 1rem 0 1rem;
+    }
+    .profile-dropdown-item {
+        &:first-child {
+            border-top-left-radius: 1rem;
+            border-top-right-radius: 1rem;
+            background-color: white;
+        }
+        &:nth-child(2) {
+            background-color: white;
+        }
+        &:nth-child(3) {
+            background-color: white;
+            margin-top: 2px;
+            
+            &:hover {
+                background-color: #eef0f2;
+            }
+        }
+        &:nth-child(4) {
+            border-bottom-left-radius: 1rem;
+            border-bottom-right-radius: 1rem;
+            background-color: white;
+
+            &:hover {
+                background-color: #eef0f2;
+            }
+        }
+        
+        &:hover {
+            color: #5D4E91;
+        }
+    }
+    .profile-dropdown-item > a {
+        display: flex;
+        align-items: center;
+
+        &:first-of-type .profile-dropdown-item-icon div {
+            border: solid 2px white;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+            cursor: pointer;
+            height: 4rem;
+            width: 4rem;
+            border-radius: 50%;
+            background-color: #C768B1;
+            display: flex;
+            align-items: center;
+            place-content: center;
+        }
+        &:first-of-type .profile-dropdown-item-icon span {
+            font-size: 2rem;
+            font-weight: 700;
+            color: white;
+            height: 20px;
+            padding-left: .125rem;
+        }
+        &:first-of-type p:first-of-type {
+            text-transform: capitalize;
+        }
+        &:first-of-type p:last-of-type {
+            font-weight: 300;
+            font-size: 1.2rem;
+        }
+    }
+
+    .profile-dropdown-item-link-profile {
+        padding: .5rem .5rem 1.5rem 6rem;
+
+        a {
+            border: solid 1px;
+            border-radius: .5rem;
+            padding: .75rem 1rem .5rem;
+        }
+        a:hover {
+            background-color: #eef0f2;
+            padding-top: 7.5px;
+        }
+    }
+    .profile-dropdown-item-icon {
+        flex: .5;
+        display: flex;
+        align-items: center;
+        padding: 1rem;
+
+        svg {
+            color: black;
+            height: 1.5rem;
+        }
+    }
+    .profile-dropdown-item:hover svg {
+        color: #5D4E91;
+    }
+    .profile-dropdown-item-link {
+        flex: 2;
+        padding: 1rem 0;
+    }
+    .profile-dropdown-footer {
+        border-top: solid 1px gray;
+        text-align: center;
+        padding: 1rem 0;
+
+        a {
+            font-size: 1rem;
+            padding: .5rem;
+            border-radius: .5rem;
+        }
+        a:hover {
+            background-color: #f7fcf9;
+            padding-top: 7.5px;
+        }
+    }
+}
+// * Hamburger Button
+.hamburger-menu {
+    position: relative;
+    height: 3rem;
+    width: 3rem;
+    align-items: center;
+    place-content: center;
+    cursor: pointer;
+    display: none;
+    transition: all .75s ease-in-out;
+    z-index: 1000;
+    @media only screen and (max-width: 768px) {
+        display: flex;
+    }
+}
+.hamburger-button {
+    display: flex;
+    z-index: 1000;
+    width: 20px;
+
+    .hamburger-item {
+        width: 20px;
+        height: 3px;
+        background: black;
+        border-radius: 5px;
+        transition: all .75s ease-in-out;
+    }
+    .hamburger-item::before,
+    .hamburger-item::after {
+        content: "";
+        position: absolute;
+        width: 20px;
+        height: 3px;
+        background: black;
+        border-radius: 5px;
+        transition: all .75s ease-in-out;
+    }
+    .hamburger-item::before {
+        transform: translateY(-6px);
+    }
+    .hamburger-item::after {
+        transform: translateY(6px);
+    }
+}
+.hamburger-menu {
+    // * ANIMATION 
+
+    &.active .hamburger-item {
+        transform: translateX(-50px);
+        background: inherit;
+    }
+    &.active .hamburger-item::before {
+        transform: rotate(45deg) translate(35px, -35px);
+    }
+    &.active .hamburger-item::after {
+        transform: rotate(-45deg) translate(35px, 35px);
+    }
+    &.active{
+        transform: translateX(-61vw);
+    }
+}
+.sidebar {
+    position: absolute;
+    top: 0;right: -60rem;
+    display: none;
+    flex-flow: column;
+    text-align: center;
+    width: 75vw;
+    height: 100vh;
+    padding: 0 4.5rem;
+    border-radius: 1rem 0 0 1rem;
+    transition: right .75s ease-in-out;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+
+    &.active {
+        display: flex;
+        right: 0;
+        box-shadow: 0 0 0 150vw rgba(0, 0, 0, .8);
+    }
+    .logo-container {
+        font-size: 5rem;
+        margin-right: 0;
+        padding: 3rem 0 2rem;
+        border-bottom: solid 1px #cccccc;
+    }
+    nav {
+        display: flex;
+        flex-flow: column;
+        place-content: center;
+        gap: 2rem;
+        flex: auto;
+
+        a {
+            font-size: 3rem;
+            font-weight: 700;
+        }
+        a:hover {
+            color: #5D4E91;
         }
     }
 }
