--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,10 +10,12 @@
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <script src="{{ asset('js/hamburger-btn.js') }}" defer></script>
+            <script src="{{ asset('js/profile-btn.js') }}" defer></script>
         {% endblock %}
     </head>
     <body>
+        {{ include('partials/_header.html.twig') }}
         {% block body %}{% endblock %}
     </body>
 </html>
