--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="sidebar" id="sidebar">
             <div class="logo-container">
-                <a href="#"><span>Bien</span><span>-</span>être</a>
+                <a href="{{ path('app_home') }}"><span>Bien</span><span>-</span>être</a>
             </div>
             <nav>
                 <a href="#">Prestataires</a>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="logo-container">
-            <a href="#"><span>Bien</span><span>-</span>être</a>
+            <a href="{{ path('app_home') }}"><span>Bien</span><span>-</span>être</a>
         </div>
 
         <nav class="main-navigation">
