--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -620,6 +620,106 @@
   box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
 }
 
+.service-page-banner {
+  display: flex;
+  align-items: center;
+  place-content: center;
+  height: 40rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.service-page-banner h1 {
+  font-size: 15rem;
+  font-weight: 700;
+  color: transparent;
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.4), 0 0 2px rgba(255, 255, 255, 0.4), 0 0 3px rgba(255, 255, 255, 0.4), 0 0 4px rgba(255, 255, 255, 0.4);
+}
+@media only screen and (max-width: 1240px) {
+  .service-page-banner h1 {
+    font-size: 12rem;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .service-page-banner h1 {
+    font-size: 10rem;
+  }
+}
+@media only screen and (max-width: 860px) {
+  .service-page-banner h1 {
+    font-size: 8rem;
+  }
+}
+@media only screen and (max-width: 720px) {
+  .service-page-banner h1 {
+    font-size: 6rem;
+  }
+}
+
+.service-page-content svg {
+  height: 1.5rem;
+}
+.service-page-content .service-page-sidebar {
+  background-color: #E4EEF8;
+  padding: 7rem 0;
+}
+.service-page-content .service-page-sidebar-container {
+  display: flex;
+  gap: 4rem;
+  font-size: 1.4rem;
+  max-width: 1440px;
+  width: calc(100% - 8rem);
+  margin: 0 auto;
+}
+.service-page-content .service-page-sidebar-container .service-page-menu {
+  flex: 0 0 36rem;
+  border-radius: 1rem;
+  padding: 4rem 0 4rem 4rem;
+  box-shadow: rgba(23, 71, 118, 0.1) 0px 10px 12px;
+  background-color: white;
+}
+@media only screen and (max-width: 992px) {
+  .service-page-content .service-page-sidebar-container .service-page-menu {
+    flex: 0 0 30rem;
+  }
+}
+@media only screen and (max-width: 860px) {
+  .service-page-content .service-page-sidebar-container .service-page-menu {
+    flex: 0 0 25rem;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .service-page-content .service-page-sidebar-container .service-page-menu {
+    display: none;
+  }
+}
+.service-page-content .service-page-sidebar-container .service-page-menu p {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.service-page-content .service-page-sidebar-container .service-page-menu ul {
+  border-left: solid 1px #DCE2E7;
+  margin: 2rem 0.5rem 0 2rem;
+  padding-left: 3px;
+}
+.service-page-content .service-page-sidebar-container .service-page-menu a {
+  display: block;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+.service-page-content .service-page-sidebar-container .service-page-menu a:hover,
+.service-page-content .service-page-sidebar-container .service-page-menu a.active {
+  background-color: #F5F8FC;
+}
+.service-page-content .service-page-sidebar-container .service-page-description h2 {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+}
+.service-page-content .service-page-sidebar-container .service-page-description p {
+  text-align: justify;
+}
+
 .hero {
   background-color: #EAF0F8;
 }
@@ -1090,6 +1190,7 @@
   width: 19rem;
   border-radius: 1rem;
   overflow: hidden;
+  background-color: white;
 }
 .main-navigation .services-button li {
   padding: 1.5rem 3rem;
