--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,9 @@
         {% endblock %}
     </head>
     <body>
-        {{ include('partials/_header.html.twig') }}
+        {% if list_categ is defined %}
+            {{ include('partials/_header.html.twig') }}
+        {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
