--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -12,7 +12,7 @@
             </div>
             <nav>
                 <a href="#">Prestataires</a>
-                <a href="#">Services</a>
+                <a href="{{ path('app_services_defaut') }}">Services</a>
                 <a href="#">Newsletter</a>
                 <a href="#">Contact</a>
             </nav>
