--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -156,6 +156,7 @@
         place-content: center;
         background-color: #C768B1;
         position: relative;
+        // overflow: hidden;
 
         &:hover {
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -163,6 +164,14 @@
 
         &-container {
             display: flex;
+
+            .avatar-container {
+                border: solid 2px white;
+                border-radius: 50%;
+                height: 6rem;
+                width: 6rem;
+                overflow: hidden;
+            }
         }
         &-container > span{
             font-size: 3rem;
@@ -239,6 +248,7 @@
             display: flex;
             align-items: center;
             place-content: center;
+            overflow: hidden;
         }
         &:first-of-type .profile-dropdown-item-icon span {
             font-size: 2rem;
