--- a/templates/services/service.html.twig
+++ b/templates/services/service.html.twig
@@ -36,15 +36,17 @@
             </div>
         </div>
         <div class="service-page-main">
-            <div class="service-page-section">
-                <!-- Contenu supplémentaire -->
-            </div>
             <div class="service-page-profile-cards">
-                <!-- Ici il y'aura une liste de cartes de profil -->
+                <div class="service-page-profile-cards-container">
+                    {% include "partials/_card-promo.html.twig" %}
+                </div>
+                <div class="service-page-profile-pagination">
+                    {{ knp_pagination_render(services) }}
+                </div>
             </div>
         </div>
     </section>
-    {# {{ dump() }} #}
+    {{ dump(services.items) }}
 </main>
 
 {% endblock %}
