--- a/sass/partials/_card-provider.scss
+++ b/sass/partials/_card-provider.scss
@@ -1,83 +1,60 @@
 .card-provider {
-    border-radius: 1rem;
-    overflow: hidden;
-    box-shadow: rgba(223, 233, 245, 1) 0px 10px 10px;
-    flex: 0 1 32rem;
-    
-    .provider-info {
-        position: relative;
-        height: 15.6rem;
-        background-color: #E7F7F0;
-        padding: 2rem 3rem;
+    flex: 0 1 225px;
+    padding: 2rem;
+    text-align: center;
+    border-radius: 10px;
+    border: solid 2px white;
 
-        .provider-name {
-            font-size: 1.8rem;
-        }
-        .provider-service {
-            font-size: 1.4rem;
-            font-weight: 300;
-            color: #6E6488;
-        }
-        .provider-image {
-            position: absolute;
-            bottom: -5rem;
-            border: solid 4px white;
-            box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
-            height: 10rem;
-            width: 10rem;
+    .provider-profile {
+        height: 14rem;
+        width: 14rem;
+        border-radius: 50%;
+        margin: auto;
+        border: solid 4px white;
+        display: flex;
+        align-items: center;
+        place-content: center;
+        background-color: deepskyblue;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 10px;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
-            background-color: #2d7fba;
+        }
+
+        span {
+            font-size: 7rem;
+            color: white;
+            padding: 1rem 0 0 .5rem;
         }
     }
+    .provider-name {
+        font-size: 1.6rem;
+        font-weight: 700;
+        margin-top: 2rem;
+    }
+    .provider-mail {
+        margin-bottom: 2rem;
+    }
+    .provider-button a {
+        background: rgb(207,196,255);
+        background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+        border-radius: 10px;
+        border: solid 1px white;
+        cursor: pointer;
+        box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
+        padding: 1rem 2rem;
+    }
 
-    .provider-details {
-        padding: 3rem;
-        background-color: white;
-        text-align: center;
+    &:hover {
+        transform: scale(1.025);
+        background-color: #fafaff;
+        box-shadow: rgba(223, 233, 245, 1) 0px 10px 10px;
 
-        .provider-social-icons {
-            display: flex;
-            align-items: center;
-            justify-content: end;
-            gap: 1rem;
-            border-bottom: 1px solid #DAE9F4;
-            padding-bottom: 1.5rem;
-            color: white;
-
-            a {
-                display: flex;
-                align-items: center;
-                place-content: center;
-                height: 2.5rem;
-                width: 2.5rem;
-                border-radius: 50%;
-                background: rgb(207,196,255);
-                background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-                
-            }
+        .provider-profile {
+            border-color: #cbd2dc;
         }
-        .provider-description {
-            font-size: 1.4rem;
-            font-weight: 300;
-            color: #9B99A3;
-            padding: 1.5rem 0;
-        }
-        .provider-service-button {
-            color: #4F4D62;
-            font-size: 1.4rem;
-            padding: 1.35rem 3.5rem 1.15rem;
-            background: rgb(207,196,255);
-            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
-            border-radius: 10px;
-            border: solid 1px white;
-            cursor: pointer;
-            box-shadow: rgba(73, 93, 108, 0.11) 0px 1px 4px;
-
-    
-            &:hover {
-                background: rgb(218,234,245);
-                background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
-            }
-        }    
     }
 }
